// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`t-props basic use 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, true, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1(Object.assign({}, ctx['this'].some.obj), key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props basic use 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.a+ctx['this'].props.b);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props child receives a copy of the t-props object, not the original 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1(Object.assign({}, ctx['this'].childProps), key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-props child receives a copy of the t-props object, not the original 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-props t-props and other props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Comp\`, true, false, true, ["a"]);
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1(Object.assign({}, ctx['this'].state1, {a: ctx['this'].a}), key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props t-props and other props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.a);
    const b3 = safeOutput(ctx['this'].props.b);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-props t-props only 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Comp\`, true, false, true, []);
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1(Object.assign({}, ctx['this'].state), key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props t-props only 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.a);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props t-props with props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, true, ["a","b"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1(Object.assign({}, ctx['this'].childProps, {a: 1,b: 2}), key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props t-props with props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
